--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.2.4",
+    "nodemon": "^3.1.0",
+    "pug": "^3.0.2"
   }
 }
