--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.2.4",
     "nodemon": "^3.1.0",
     "pug": "^3.0.2"
