--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "luxon": "^3.4.4",
     "mongoose": "^8.2.4",
     "nodemon": "^3.1.0",
     "pug": "^3.0.2"
