--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express-validator": "^7.0.1",
     "luxon": "^3.4.4",
     "mongoose": "^8.2.4",
-    "nodemon": "^3.1.0",
-    "pug": "^3.0.2"
+    "nodemon": "^3.1.0"
   }
 }
